[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/enemy/enemy_aggro_box.gd" type="Script" id=1]
[ext_resource path="res://src/hurtbox.gd" type="Script" id=2]
[ext_resource path="res://src/enemy/enemy_turret.gd" type="Script" id=3]
[ext_resource path="res://src/hitbox.gd" type="Script" id=4]
[ext_resource path="res://scenes/instanced/state_machines/enemy_state_machine_turret.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/pixel_snap.gd" type="Script" id=6]
[ext_resource path="res://src/sprites/sprite_enemy_turret.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="EnemyTurret" type="KinematicBody2D"]
script = ExtResource( 3 )
facing = 1

[node name="EnemyStateMachineTurret" parent="." instance=ExtResource( 5 )]
target_instance_path = NodePath("..")

[node name="PixelSnap" type="Node2D" parent="."]
script = ExtResource( 6 )
mode = 0
process_mode = 0

[node name="TurretSprite" type="Node2D" parent="PixelSnap"]
script = ExtResource( 7 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 4 )
active = true
contact_damage = 24
contact_force = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="AggroBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroBox"]
shape = SubResource( 3 )

[node name="AimTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RefireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="dying" from="." to="EnemyStateMachineTurret" method="fire_custom_event" binds= [ "SetDying" ]]
[connection signal="take_damage" from="Hurtbox" to="." method="take_damage"]
[connection signal="screen_entered" from="AggroBox" to="EnemyStateMachineTurret" method="fire_custom_event" binds= [ "ScreenEntered" ]]
[connection signal="screen_exited" from="AggroBox" to="EnemyStateMachineTurret" method="fire_custom_event" binds= [ "ScreenExited" ]]
[connection signal="timeout" from="AimTimer" to="EnemyStateMachineTurret" method="fire_custom_event" binds= [ "AimFinished" ]]
[connection signal="timeout" from="RefireTimer" to="EnemyStateMachineTurret" method="fire_custom_event" binds= [ "Fire" ]]
[connection signal="timeout" from="DyingTimer" to="EnemyStateMachineTurret" method="fire_custom_event" binds= [ "DyingFinished" ]]
